Add dev mode with live reload
quarkusDev resolves the application model with setDevMode and
setCollectReloadableDependencies, builds a command line with
DevModeCommandLineBuilder and forks a JVM that runs DevModeMain, as the Gradle
plugin does. That builder lives in quarkus-core-deployment, so the plugin now
depends on it. The dev process gets its own classpath: a second resolution of
quarkus-core-deployment and quarkus-bootstrap-maven-resolver at the version the
application uses, plus the parent-first artifacts of ConfiguredClassLoading.

DevModeMain.getApplicationBuildDirs takes one classes directory and one
resources directory, so the module's classes and the unpacked local modules are
staged into dev-classes and the resources into dev-resources under the task
output directory. Quarkus recompiles into those, which leaves the toolchain's
own compilation output alone: build and test are unaffected by a dev session.
Local modules hot-reload as part of the main module, so the trade-off recorded
in 3.5 costs less than expected; a change in one still restarts the whole
application rather than reloading that module alone.

KotlinCompilationProvider takes compiler-plugin paths rather than coordinates,
so the plugin resolves kotlin-allopen-compiler-plugin-embeddable at the module's
Kotlin version and forwards the annotations of settings.kotlin.allOpen as
all-open:annotation=<fqn>. presets is an enum a plugin cannot read, so the
quarkus preset is assumed - it only covers the javax.enterprise.context
annotations that Quarkus 3 no longer uses, so it opens nothing on its own, and
the toolchain's own compiler leaves such a bean final too. Verified by
decompiling the recompiled class: final without a declared annotation, open with
one.

The process launcher of quarkusRun moves to Process.kt and is shared. The forked
JVM gets a terminal: the console renders and offers continuous testing, and
SIGTERM stops the application cleanly.

module.yaml is still not watched; there is no eq