@@ -33,6 +33,8 @@ interface QuarkusSettings {
 
     val run: QuarkusRunSettings
 
+    val dev: QuarkusDevSettings
+
     val image: QuarkusImageSettings
 
     val deploy: QuarkusDeploySettings
@@ -63,6 +65,48 @@ interface QuarkusRunSettings {
      * Falls back to the `quarkus.run.target` system property.
      */
     val target: String?
+}
+
+@Configurable
+interface QuarkusDevSettings {
+    /** JVM options for the dev-mode process. */
+    val jvmArgs: List<String> get() = emptyList()
+
+    /** Program arguments appended to the command line of the application. */
+    val arguments: List<String> get() = emptyList()
+
+    /** Environment variables added to the environment of the dev-mode process. */
+    val environment: Map<String, String> get() = emptyMap()
+
+    /** Working directory of the dev-mode process, relative to the module root. */
+    val workingDirectory: String?
+
+    /**
+     * `true`, `false`, `client`, or a port number. Falls back to the `debug` system property.
+     * Quarkus listens for a debugger on `debugPort` unless this is `false`.
+     */
+    val debug: String?
+
+    /** Wait for a debugger to attach before starting. Falls back to the `suspend` system property. */
+    val suspend: String?
+
+    /** Falls back to the `debugHost` system property, then `localhost`. */
+    val debugHost: String?
+
+    /** Falls back to the `debugPort` system property, then `5005`. */
+    val debugPort: String?
+
+    /** Add `--add-opens=java.base/java.lang=ALL-UNNAMED` to the dev-mode process. */
+    val openJavaLang: Boolean get() = false
+
+    /** Java modules to add with `--add-modules`. */
+    val modules: List<String> get() = emptyList()
+
+    /** Extra arguments for the Kotlin compiler that recompiles changed sources. */
+    val compilerArgs: List<String> get() = emptyList()
+
+    /** Keep the C2 compiler enabled. Dev mode disables it by default for faster startup. */
+    val forceC2: Boolean get() = false
 }
 
 @Configurable
